# rsmlui

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  rustfmt.toml
drop-tree/: Cargo.toml  README.md
drop-tree-derive/: Cargo.toml
drop-tree-derive/src/: lib.rs
drop-tree/src/: lib.rs
examples/assets/: basic.rml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/custom-backend-advanced/: Cargo.toml
examples/custom-backend-advanced/src/: main.rs
examples/custom-interface/: Cargo.toml
examples/custom-interface/src/: main.rs
examples/raw/: Cargo.toml
examples/raw/src/: main.rs  test.rml
rml-doc/: .gitignore  Doxyfile  postprocess.py  preprocess.py  update.ps1
rml-doc/moxygen-templates/: class.md  namespace.md
rsmlui/: Cargo.toml
rsmlui-backends/: Cargo.toml
rsmlui-backends/src/: backend.rs  error.rs  lib.rs  window.rs
rsmlui-backends/src/interfaces/: mod.rs
rsmlui-backends/src/interfaces/file/: default.rs
rsmlui-backends/src/interfaces/render/: gl2.rs  gl3.rs  mod.rs
rsmlui-backends/src/interfaces/system/: win32.rs
rsmlui-backends/src/monolithic/: mod.rs  win32_gl2.rs
rsmlui-core/: Cargo.toml
rsmlui-core/src/: error.rs  errors.rs  lib.rs
rsmlui-core/src/containers/: dictionary.rs  mod.rs  variant.rs
rsmlui-core/src/core/: backend_handle.rs  context.rs  core.rs  element_document.rs  events.rs  log.rs  mod.rs
rsmlui-core/src/interfaces/: file.rs  mod.rs  renderer.rs  system.rs
rsmlui-core/src/renderers/: gl2.rs  mod.rs
rsmlui-core/src/systems/: mod.rs  win32.rs
rsmlui-core/src/types/: aliases.rs  colour.rs  cursor.rs  document.rs  flags.rs  glam.rs  handles.rs  input.rs  matrix.rs  mod.rs  rectangle.rs  renderer.rs  style.rs  vectors.rs
rsmlui-core/src/types/math/: matrix.rs  mod.rs  vector.rs
rsmlui-core/src/utils/: conversions.rs  macros.rs  raw.rs
rsmlui-macros/: Cargo.toml
rsmlui-macros/src/: doc_gen.rs  lib.rs  sys_cast.rs  utils.rs
rsmlui-sys/: .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  build.rs  dummy.cpp  rsmlui_config.h.in
rsmlui-sys/cmake/: FetchFreetype.cmake
rsmlui-sys/include/: Bindings.h  Common.h  Core.h
rsmlui-sys/include/rsmlui/: Backend.h  Context.h  Core.h  ElementDocument.h  Renderer.h  Types.h
rsmlui-sys/src/: bindings.rs  lib.rs
rsmlui-sys/src/cxx/: Core.cpp  FileInterfaceDefault.cpp
rsmlui-sys/src/ffi/: backend.rs  context.rs  core.rs  dictionary.rs  element_document.rs  extern_types.rs  file_interface.rs  interfaces.rs  log.rs  math.rs  mod.rs  render_interface.rs  renderer.rs  rust_system_interface.rs  system_interface.rs  utils.rs  variant.rs
rsmlui-sys/src/ffi/interfaces/: file_default.rs  mod.rs  render_interface_gl2.rs  render_interface_gl3.rs  system_win32.rs
rsmlui-sys/src/include/rsmlui/: Backend.h  Bindings.h  Context.h  Core.h  Dictionary.h  ElementDocument.h  FileInterface.h  InterfaceDecls.h  RenderInterface.h  Renderer.h  SystemInterface.h  Utils.h  Variant.h
rsmlui/src/: errors.rs  lib.rs  macros.rs
rsmlui/src/backends/: mod.rs  s_win32_r_gl2.rs  win32_gl2.rs
rsmlui/src/core/: app.rs  backend.rs  context.rs  core.rs  element_document.rs  events.rs  log.rs  mod.rs
rsmlui/src/interfaces/: backend.rs  mod.rs  renderer.rs  system.rs  window.rs
rsmlui/src/renderers/: gl2.rs  mod.rs
rsmlui/src/systems/: mod.rs  win32.rs
rsmlui/src/types/: input.rs
rsmlui/src/utils/: conversions.rs  cursor.rs  input.rs  macros.rs  mod.rs  raw.rs
rsmlui/src/window/: mod.rs  winit.rs
