[package]
name = "rsmlui-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rsmlui-sys = { path = "../rsmlui-sys", default-features = false }
rsmlui-macros = { path = "../rsmlui-macros", default-features = false }
drop-tree = { path = "../drop-tree" }

glam = "0.30.9"
thiserror = "2.0.17"
sealed = "0.6.0"
bon = "3.9.1"

[features]
default = ["generate-documentation"]

generate-documentation = ["rsmlui-macros/generate-documentation"]

# cosmic-text = ["rsmlui-sys/cosmic-text"]
freetype = ["rsmlui-sys/freetype"]

# system-win32 = ["rsmlui-sys/system-win32"]

# renderer-gl2 = ["rsmlui-sys/renderer-gl2"]

# backend-win32-gl2 = ["rsmlui-sys/system-win32", "rsmlui-sys/renderer-gl2"]
