[package]
name = "rsmlui"
version = "0.1.0"
edition = "2024"

[dependencies]
rsmlui-backends = { path = "../rsmlui-backends", default-features = false }
rsmlui-core = { path = "../rsmlui-core", default-features = false }

[features]
default = ["freetype"]

freetype = ["rsmlui-core/freetype"]

backend-win32-gl2 = ["rsmlui-backends/backend-win32-gl2"]
