[package]
name = "rsmlui"
version = "0.1.0"
edition = "2024"

[dependencies]
rsmlui-backends = { path = "../rsmlui-backends", default-features = false }
rsmlui-core = { path = "../rsmlui-core", default-features = false }
rsmlui-macros = { path = "../rsmlui-macros", default-features = false }

[features]
default = ["freetype", "generate-documentation"]

generate-documentation = ["rsmlui-core/generate-documentation"]

glam = ["rsmlui-core/glam"]

freetype = ["rsmlui-backends/freetype"]

renderer-gl2 = ["rsmlui-backends/renderer-gl2"]
renderer-gl3 = ["rsmlui-backends/renderer-gl3"]
